--- a/actions/publish-with-publish-please/action.yml
+++ b/actions/publish-with-publish-please/action.yml
@@ -33,4 +33,4 @@ runs:
       run: git checkout -- package-lock.json || true
 
     - shell: bash
-      run: npx publish-please || (git status && false)
+      run: npx publish-please --access=public || (git status && false)
