--- a/actions/test-npm/action.yml
+++ b/actions/test-npm/action.yml
@@ -23,7 +23,7 @@ runs:
           ${{ runner.os }}-node-
 
     - shell: bash
-      run: npm ci
+      run: npm ci --legacy-peer-deps
 
     - shell: bash
       run: npm run ${{ inputs.task }}
