--- a/workflows/check-security-alerts.yml
+++ b/workflows/check-security-alerts.yml
@@ -18,9 +18,12 @@ jobs:
 
             const { owner, repo } = context.repo;
             const state           = 'open';
-            const dependabotLabel = 'dependabot';
-            const codeqlLabel     = 'codeql';
-            const securityLabel   = 'security notification';
+
+            const labels = {
+              dependabot: 'dependabot',
+              codeq:      'codeql',
+              security:   'security notification',
+            };
 
             async function getDependabotAlerts () {
               const dependabotListAlertsUrl  = `https://api.github.com/repos/${ owner }/${ repo }/dependabot/alerts?state=${ state }`;
@@ -68,7 +71,7 @@ jobs:
             
             const dependabotAlerts      = await getDependabotAlerts();
             const codeqlAlerts          = await getCodeqlAlerts();
-            const {data: existedIssues} = await github.rest.issues.listForRepo({ owner, repo, labels: [securityLabel], state });
+            const {data: existedIssues} = await github.rest.issues.listForRepo({ owner, repo, labels: [labels.security], state });
 
             const issueDictionary = existedIssues.reduce((res, issue) => {
               const alertUrl = issue.body.match(/Link:\s*(https.*\d*)/)?.[1];
@@ -85,7 +88,7 @@ jobs:
 
               createIssue({ owner, 
                 repo:        '${{ secrets.SECURITY_ISSUE_REPO }}', 
-                labels:      [dependabotLabel, securityLabel], 
+                labels:      [labels.dependabot, labels.security, alert.dependency.scope], 
                 originRepo:  repo,
                 summary:     alert.security_advisory.summary, 
                 description: alert.security_advisory.description, 
@@ -100,7 +103,7 @@ jobs:
 
               createIssue({ owner, 
                 repo:        '${{ secrets.SECURITY_ISSUE_REPO }}', 
-                labels:      [codeqlLabel, securityLabel], 
+                labels:      [labels.codeql, labels.security], 
                 originRepo:  repo,
                 summary:     alert.rule.description, 
                 description: alert.most_recent_instance.message.text, 
