feat: added removing spoiled issues

--- a/workflows/check-security-alerts.yml
+++ b/workflows/check-security-alerts.yml
@@ -25,6 +25,27 @@ jobs:
               security:   'security notification',
             };
 
+            async function getDependabotAlertInfo (alertNumber) {
+              const dependabotListAlertsUrl  = `https://api.github.com/repos/${ owner }/${ repo }/dependabot/alerts/${ alertNumber }`;
+              const dependabotRequestOptions = {
+                headers: { 'Authorization': 'Bearer ${{ secrets.ACTIVE_TOKEN }}' }
+              }
+
+              const response = await fetch(dependabotListAlertsUrl, dependabotRequestOptions);
+              const data     = await response.json();
+
+              if (data.state)
+                return data;
+
+              return null;
+            }
+
+            async function isDependabotAlertOpen (alertNumber) {
+              const alert = await getDependabotAlertInfo(alertNumber);
+
+              return alert?.state == 'open';
+            }
+
             async function getDependabotAlerts () {
               const dependabotListAlertsUrl  = `https://api.github.com/repos/${ owner }/${ repo }/dependabot/alerts?state=${ state }`;
               const dependabotRequestOptions = {
@@ -65,22 +86,36 @@ jobs:
             }
 
             function needCreateIssue (alert) {
-              return !issueDictionary[alert.html_url]
+              return !alertDictionary[alert.html_url]
                     && Date.now() - new Date(alert.created_at) <= 1000 * 60 * 60 * 24;
+            }
+
+            async function closeIssue (number) {
+              return github.rest.issues.create({ owner, repo, issue_number: number, state: 'closed' });
             }
             
             const dependabotAlerts      = await getDependabotAlerts();
             const codeqlAlerts          = await getCodeqlAlerts();
             const {data: existedIssues} = await github.rest.issues.listForRepo({ owner, repo, labels: [labels.security], state });
 
-            const issueDictionary = existedIssues.reduce((res, issue) => {
-              const alertUrl = issue.body.match(/Link:\s*(https.*\d*)/)?.[1];
+            const alertDictionary = existedIssues.reduce((res, issue) => {
+              const [,alertUrl, alertNumber] = issue.body.match(/Link:\s*(https.*?(\d+)$)/)?.[1];
 
               if (alertUrl)
-                res[alertUrl] = issue;
+                return res;
+
+              res[alertUrl] = {
+                issue,
+                number: alertNumber,
+              };
 
               return res;
             }, {})
+
+            alertDictionary.forEach(alert => {
+              if (!isDependabotAlertOpen(alert.number))
+                closeIssue(alert.issue.number)
+            })
 
             dependabotAlerts.forEach(alert => {
               if (!needCreateIssue(alert))
