fix: fixed creating alertDictionary

--- a/workflows/check-security-alerts.yml
+++ b/workflows/check-security-alerts.yml
@@ -99,9 +99,9 @@ jobs:
             const {data: existedIssues} = await github.rest.issues.listForRepo({ owner, repo, labels: [labels.security], state });
 
             const alertDictionary = existedIssues.reduce((res, issue) => {
-              const [,alertUrl, alertNumber] = issue.body.match(/Link:\s*(https.*?(\d+)$)/)?.[1];
+              const [,alertUrl, alertNumber] = issue.body.match(/Link:\s*(https.*?(\d+)$)/);
 
-              if (alertUrl)
+              if (!alertUrl)
                 return res;
 
               res[alertUrl] = {
