--- a/actions/read-matrix-status/action.yml
+++ b/actions/read-matrix-status/action.yml
@@ -10,7 +10,8 @@ runs:
   steps:
     - uses: actions/download-artifact@v4
       with:
-        name: matrix-status
+        pattern: matrix-status-*
+        merge-multiple: true
 
     - name: Read matrix status
       id: matrix-status
